update gradle prop